assets/css/components/header.css
.header{
    height: 120px;
    background: #0E1414;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    z-index: 1;
}

.main .header {
    background: rgba(11, 16, 16, 0.36);
    backdrop-filter: blur(7.5px);
}

.header__inner{
    height: 100%;
    display: flex;
    align-items: center;
}

.header__button{
    margin-left: auto;
}

.burger{
    display: none;
}

.header__menu{
    position: absolute;
    height: calc(100vh - 60px);
    width: 100%;
    border-top: 1px solid rgba(255, 255, 255, 0.1);
    display: none;
    left: 0;
    background: #0E1414;
    padding: 0 24px;
    padding-top: 75px;
    padding-bottom: 42px;
}

.header__menu-phone{
    margin-top: auto;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.header__menu-phone a{
    color: var(--yellow);
    font-family: var(--oswald);
    font-size: 16px;
    font-weight: 400;
    text-transform: uppercase;
}

@media (max-width:900px){
    .header{
        height: 60px;
        padding: 0 20px;
        position: relative;
    }

    .header__nav,
    .header__button{
        display: none;
    }

    .header__inner{
        justify-content: space-between;
    }

    .burger{
        position: relative;
        width: 36px;
        height: 36px;
        display: block;
    }

    .burger:after,
    .burger::before{
        content: '';
        display: block;
        position: absolute;
        width: 100%;
        background: white;
        height: 2px;
        border-radius: 5px;
        transition: all .1s ease-in-out;
    }

    .burger::after{
        top: 10px;
    }

    .burger::before{
        bottom: 10px;
    }

    .burger.active::after{
        transform: rotate(40deg);
        top: 50%;
    }

    .burger.active::before{
        transform: rotate(-40deg);
        top: 50%;
    }

    .header__menu-inner{
        height: 100%;
        display: flex;
        flex-direction: column;
    }

}

